# MyoroPlayer

./: .savedPlaylists  CMakeLists.txt  LICENSE  README.md  TODO  Ubuntu Install.sh  index.css  index.html  neutralino.config.json  package-lock.json  package.json
include/: About.h  App.h  Controls.h  Frame.h  Interface.h  MenuBar.h  MusicControls.h  MusicSelector.h  SideBar.h  SongList.h  UpdateSlider.h
js/: .preload.js.swp  index.js  main.js  preload.js
resources/: index.css  index.html
resources/js/: index.js
scripts/: getAlbumCover  yt2mp3windows.cpp
src/: About.cpp  App.cpp  Controls.cpp  Frame.cpp  Interface.cpp  MenuBar.cpp  MusicControls.cpp  MusicSelector.cpp  SideBar.cpp  SongList.cpp  UpdateSlider.cpp
